# EConsole

./: .gitignore  CMakeLists.txt  README.md
include/: ConsoleConstructor.h
lib/PDCurses 3.9/: CMakeLists.txt
lib/PDCurses 3.9/common/: RCa06108
src/: ConsoleConstructor.cpp
